Remove unused scripts and update requirements for LLM API integration
- Deleted new_script.sh and script.sh as they are no longer needed.
- Updated requirements.txt to include groq>=0.4.0 for query expansion.
- Removed commented-out dependencies for data cleaning from requirements.txt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,5 @@ sentence-transformers>=2.2.0
 # Hybrid search (BM25 keyword matching)
 rank-bm25>=0.2.2
 
-# Optional but recommended for data cleaning
-# ftfy  # Fix text encoding issues (Unicode problems, mojibake)
-# cleantext  # Data cleaning utilities
-# textblob  # Spell checking for OCR cleanup
+# LLM API for query expansion
+groq>=0.4.0
